@@ -45,8 +45,6 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'suggests' => array(
-	),
 );
 
 ?>
