@@ -1,3 +1,9 @@
+VERSION SVN (~0.2.1)
+	* Added database field 'paymethod_method' which should hold the selected
+	payment method - eg. 'paymethod_method' => 'paymentlib_offline_giro', so a
+	specific method can be identified in the table tx_paymentlib_transactions.
+
+
 VERSION 0.2.0
 
 	* Add to new abstract functions, which can be used for adding extra
